--- a/tutorials/index.ipynb
+++ b/tutorials/index.ipynb
@@ -26,6 +26,7 @@
     "- [Mathematical programming with MultibodyPlant](./mathematical_program_multibody_plant.ipynb)\n",
     "- [PyPlot animation](./pyplot_animation_multibody_plant.ipynb)\n",
     "- [Rendering MultibodyPlant](./rendering_multibody_plant.ipynb)\n",
+    "- [Use hydroelastic contact](./hydro_box_with_contact_results.ipynb)\n",
     "\n",
     "More multibody tutorials coming soon!\n",
     "\n",
