Add a visual yellow internal rod into the disk

--- a/tutorials/hydro_compliant_cylinder_compliant_box.ipynb
+++ b/tutorials/hydro_compliant_cylinder_compliant_box.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "<RunResult.STOPPED: 2>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
     "          <drake:relaxation_time>0</drake:relaxation_time>\n",
     "        </drake:proximity_properties>\n",
     "      </collision>\n",
-    "      <visual name=\"visual\">\n",
+    "      <visual name=\"EulerDisk\">\n",
     "        <geometry>\n",
     "          <cylinder>\n",
     "            <radius>0.04</radius>\n",
@@ -201,6 +201,16 @@
     "        </geometry>\n",
     "        <material>\n",
     "          <diffuse>1.0 1.0 1.0 0.5</diffuse>\n",
+    "        </material>\n",
+    "      </visual>\n",
+    "      <visual name=\"InternalRod\">\n",
+    "        <geometry>\n",
+    "          <box>\n",
+    "            <size>0.04 0.005 0.005</size>\n",
+    "          </box>\n",
+    "        </geometry>\n",
+    "        <material>\n",
+    "          <diffuse>1.0 1.0 0.0 1.0</diffuse>\n",
     "        </material>\n",
     "      </visual>\n",
     "    </link>\n",
@@ -234,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +253,7 @@
        "<RunResult.STOPPED: 2>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,16 +386,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pydrake.systems.analysis.SimulatorStatus at 0x7f41a450acf0>"
+       "<pydrake.systems.analysis.SimulatorStatus at 0x7fe4d8dad470>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
