For comparison, add point-contact cylinder

--- a/tutorials/hydro_compliant_cylinder_compliant_box.ipynb
+++ b/tutorials/hydro_compliant_cylinder_compliant_box.ipynb
@@ -110,19 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.00040833 0.         0.        ]\n",
-      " [0.         0.00040833 0.        ]\n",
-      " [0.         0.         0.0008    ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pydrake.multibody.tree import UnitInertia\n",
     "\n",
@@ -138,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +137,7 @@
        "<RunResult.STOPPED: 2>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,6 +216,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<RunResult.STOPPED: 2>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pydrake.visualization import ModelVisualizer\n",
+    "\n",
+    "# Define a compliant hydroelastic box.\n",
+    "pointcontact_cylinder_sdf = \"\"\"<?xml version=\"1.0\"?>\n",
+    "<sdf version=\"1.7\">\n",
+    "  <model name=\"PointContactCylinder\">\n",
+    "    <pose>0 0 0 0 0 0</pose>\n",
+    "    <link name=\"pointcontact_cylinder_link\">\n",
+    "      <inertial>\n",
+    "        <mass>1.0</mass>\n",
+    "        <inertia>\n",
+    "          <ixx>0.00040833</ixx> <ixy>0.0</ixy> <ixz>0.0</ixz>\n",
+    "          <iyy>0.00040833</iyy> <iyz>0.0</iyz>\n",
+    "          <izz>0.0008</izz>\n",
+    "        </inertia>\n",
+    "      </inertial>\n",
+    "      <collision name=\"collision\">\n",
+    "        <geometry>\n",
+    "          <cylinder>\n",
+    "            <radius>0.04</radius>\n",
+    "            <length>0.01</length>\n",
+    "          </cylinder>\n",
+    "        </geometry>\n",
+    "        <drake:proximity_properties>\n",
+    "          <drake:mu_dynamic>1</drake:mu_dynamic>\n",
+    "          <drake:mu_static>1</drake:mu_static>\n",
+    "          <drake:hunt_crossley_dissipation>0</drake:hunt_crossley_dissipation>\n",
+    "          <drake:relaxation_time>0</drake:relaxation_time>\n",
+    "        </drake:proximity_properties>\n",
+    "      </collision>\n",
+    "      <visual name=\"EulerDisk\">\n",
+    "        <geometry>\n",
+    "          <cylinder>\n",
+    "            <radius>0.04</radius>\n",
+    "            <length>0.01</length>\n",
+    "          </cylinder>\n",
+    "        </geometry>\n",
+    "        <material>\n",
+    "          <diffuse>0.3 0.5 0.3 0.5</diffuse>\n",
+    "        </material>\n",
+    "      </visual>\n",
+    "      <visual name=\"InternalRod\">\n",
+    "        <geometry>\n",
+    "          <box>\n",
+    "            <size>0.04 0.005 0.005</size>\n",
+    "          </box>\n",
+    "        </geometry>\n",
+    "        <material>\n",
+    "          <diffuse>0.2 1.0 0.2 1.0</diffuse>\n",
+    "        </material>\n",
+    "      </visual>\n",
+    "    </link>\n",
+    "  </model>\n",
+    "</sdf>\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "# Visualize the SDFormat string you just defined.\n",
+    "visualizer = ModelVisualizer(meshcat=meshcat)\n",
+    "visualizer.parser().AddModelsFromString(pointcontact_cylinder_sdf, \"sdf\")\n",
+    "visualizer.Run(loop_once=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -244,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +323,7 @@
        "<RunResult.STOPPED: 2>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,6 +424,7 @@
     "    parser = Parser(plant)\n",
     "\n",
     "    parser.AddModelsFromString(compliant_cylinder_sdf, \"sdf\")\n",
+    "    parser.AddModelsFromString(pointcontact_cylinder_sdf, \"sdf\")\n",
     "    parser.AddModelsFromString(compliant_box_sdf, \"sdf\")\n",
     "\n",
     "    # Weld the rigid box to the world so that it's fixed during simulation.\n",
@@ -364,12 +435,19 @@
     "    # Finalize the plant after loading the scene.\n",
     "    plant.Finalize()\n",
     "\n",
-    "    # Initial pose of the cylinder\n",
+    "    # Initial pose of the compliant cylinder\n",
     "    # W = world frame\n",
     "    # C = frame at the center of the compliant cylinder\n",
-    "    X_WC = RigidTransform(p=[0, 0, 0.03], rpy=RollPitchYaw(0.4 * np.pi, 0, 0))\n",
+    "    X_WC = RigidTransform(p=[0, 0.125, 0.03], rpy=RollPitchYaw(0.4 * np.pi, 0, 0))\n",
     "    plant.SetDefaultFreeBodyPose(plant.GetBodyByName(\"compliant_cylinder_link\"), X_WC)\n",
     "\n",
+    "    # Initial pose of the point-contact cylinder\n",
+    "    # W = world frame\n",
+    "    # C = frame at the center of the compliant cylinder\n",
+    "    X_WC = RigidTransform(p=[0, -0.125, 0.03], rpy=RollPitchYaw(0.4 * np.pi, 0, 0))\n",
+    "    plant.SetDefaultFreeBodyPose(plant.GetBodyByName(\"pointcontact_cylinder_link\"), X_WC)\n",
+    "\n",
+    "    \n",
     "    return builder, plant, scene_graph"
    ]
   },
@@ -386,16 +464,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pydrake.systems.analysis.SimulatorStatus at 0x7fe4d8dad470>"
+       "<pydrake.systems.analysis.SimulatorStatus at 0x7f794b5672b0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -556,19 +634,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ContactReporter::Publish() called at time=3.0\n",
+      "ContactReporter::Publish() called at time=10.0\n",
       "num_hydroelastic_contacts() = 1\n",
       "\n",
       "hydroelastic_contact_info(0): 0-th hydroelastic contact patch\n",
       "F_Ac_W(): spatial force (on body A, at centroid of contact surface, in World frame) = \\\n",
       "SpatialForce(\n",
-      "  tau=[-5.098176791024853e-13, -7.577400020474465e-14, 6.077687608545623e-19],\n",
-      "  f=[-6.889110099915437e-13, -1.5287151408153817e-11, 9.810000000350467],\n",
+      "  tau=[-4.3918929068543686e-12, -5.0326381179994e-13, 5.365605613073043e-21],\n",
+      "  f=[-2.734743841641078e-12, 3.151783265518314e-11, 9.809999999864333],\n",
       ")\n",
       "contact_surface()\n",
-      "total_area(): area of contact surface in m^2 = 0.0050138449172460195\n",
-      "num_faces(): number of polygons or triangles = 343\n",
-      "centroid(): centroid (in World frame) = [-0.02448112 -0.00362292 -0.01000001]\n",
+      "total_area(): area of contact surface in m^2 = 0.005013844917246013\n",
+      "num_faces(): number of polygons or triangles = 306\n",
+      "centroid(): centroid (in World frame) = [-0.02447072  0.12107757 -0.01000001]\n",
       "\n"
      ]
     }
@@ -585,7 +663,7 @@
     "    simulator.Initialize()\n",
     "    simulator.set_target_realtime_rate(1)\n",
     "    \n",
-    "    v_init = np.hstack((np.array([0, 0, 2 * np.pi]), np.array([0, 0, 0])))\n",
+    "    v_init = np.hstack((np.array([0, 0, 2 * np.pi, 0, 0, 0]), np.array([0, 0, 2 * np.pi, 0, 0, 0])))\n",
     "    \n",
     "    plant_context = diagram.GetSubsystemContext(plant, simulator.get_context())\n",
     "    plant.SetVelocities(plant_context, v_init)\n",
@@ -598,7 +676,7 @@
     "    diagram.ForcedPublish(simulator.get_context())\n",
     "\n",
     "    \n",
-    "run_simulation_with_contact_report_and_viz(sim_time=3, time_step=1e-4)"
+    "run_simulation_with_contact_report_and_viz(sim_time=10, time_step=1e-4)"
    ]
   },
   {
@@ -614,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,13 +731,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# html_file = open(\"/home/damrongguoy/record_hydro_compliant_cylinder_compliant_box.html\", \"wt\")\n",
-    "# html_file.write(meshcat.StaticHtml())\n",
-    "# html_file.close()"
+    "html_file = open(\"/home/damrongguoy/2023-04-03_record_hydro_compliant_cylinder_compliant_box.html\", \"wt\")\n",
+    "html_file.write(meshcat.StaticHtml())\n",
+    "html_file.close()"
    ]
   },
   {
