[WIP] Change ycb models to hydroelastics
- For verification, add contact visualization to authoring_multibody_simulation
  notebook and save recording to HTML file.

--- a/tutorials/authoring_multibody_simulation.ipynb
+++ b/tutorials/authoring_multibody_simulation.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,9 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Meshcat listening for connections at http://localhost:7000\n"
+     ]
+    }
+   ],
    "source": [
     "# Start the visualizer. The cell will output an HTTP link after the execution.\n",
     "# Click the link and a MeshCat tab should appear in your browser.\n",
@@ -93,9 +101,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Click 'Stop Running' or press Esc to quit\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<RunResult.STOPPED: 2>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# First we'll choose one of Drake's example model files, a KUKA iiwa arm.\n",
     "iiwa7_model_url = (\n",
@@ -118,9 +144,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Click 'Stop Running' or press Esc to quit\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<RunResult.STOPPED: 2>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Choose another one of Drake's example model files, a Schunk WSG gripper.\n",
     "schunk_wsg50_model_url = (\n",
@@ -150,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,9 +249,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Click 'Stop Running' or press Esc to quit\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<RunResult.STOPPED: 2>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Visualize the cylinder from the SDFormat string you just defined.\n",
     "visualizer = ModelVisualizer(meshcat=meshcat)\n",
@@ -293,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,6 +388,26 @@
     "            <size>0.55 1.1 0.05</size>\n",
     "          </box>\n",
     "        </geometry>\n",
+    "        <drake:proximity_properties>\n",
+    "          <drake:compliant_hydroelastic/>\n",
+    "          <drake:hydroelastic_modulus>\n",
+    "            <!-- 1e7 Pa for objects of size in centimeters of HDPE plastic\n",
+    "             with Young's modulus 1 GPa -->\n",
+    "            1e7\n",
+    "          </drake:hydroelastic_modulus>\n",
+    "          <drake:mesh_resolution_hint>\n",
+    "            <!-- 1 cm mesh resolution for objects of size in centimeters -->\n",
+    "            0.01\n",
+    "          </drake:mesh_resolution_hint>\n",
+    "          <drake:mu_dynamic>0.5</drake:mu_dynamic>\n",
+    "          <drake:mu_static>0.5</drake:mu_static>\n",
+    "          <drake:hunt_crossley_dissipation>\n",
+    "            1.25\n",
+    "          </drake:hunt_crossley_dissipation>\n",
+    "          <drake:relaxation_time>\n",
+    "            0.1\n",
+    "          </drake:relaxation_time>\n",
+    "        </drake:proximity_properties>\n",
     "      </collision>\n",
     "    </link>\n",
     "    <frame name=\"table_top_center\">\n",
@@ -365,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,12 +494,15 @@
     "    plant.SetDefaultFreeBodyPose(cracker_box, X_WorldCracker)\n",
     "\n",
     "    # Add visualizer to visualize the geometries.\n",
-    "    visualizer = MeshcatVisualizer.AddToBuilder(\n",
-    "        builder, scene_graph, meshcat,\n",
-    "        MeshcatVisualizerParams(role=Role.kPerception, prefix=\"visual\"))\n",
+    "    from pydrake.visualization import ApplyVisualizationConfig, VisualizationConfig\n",
+    "    ApplyVisualizationConfig(\n",
+    "        config = VisualizationConfig(\n",
+    "                     publish_period = 1 / 512.0,\n",
+    "                     publish_contacts = True),\n",
+    "        builder=builder, meshcat=meshcat)\n",
     "\n",
     "    diagram = builder.Build()\n",
-    "    return diagram, visualizer"
+    "    return diagram"
    ]
   },
   {
@@ -435,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,14 +531,47 @@
     "    return simulator\n",
     "\n",
     "def run_simulation(sim_time_step):\n",
-    "    diagram, visualizer = create_scene(sim_time_step)\n",
+    "    diagram = create_scene(sim_time_step)\n",
     "    simulator = initialize_simulation(diagram)\n",
-    "    visualizer.StartRecording()\n",
-    "    simulator.AdvanceTo(5.0)\n",
-    "    visualizer.PublishRecording()\n",
+    "    meshcat.StartRecording()\n",
+    "    simulator.AdvanceTo(10.0)\n",
+    "    meshcat.PublishRecording()\n",
     "\n",
     "# Run the simulation with a small time step. Try gradually increasing it!\n",
-    "run_simulation(sim_time_step=0.0001)"
+    "run_simulation(sim_time_step=0.0001)\n",
+    "html_file = open(\"/home/damrongguoy/2023-04-04_record_authoring_multibody_simulation.html\", \"wt\")\n",
+    "html_file.write(meshcat.StaticHtml())\n",
+    "html_file.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (Damrong Note) Previous failed attempt\n",
+    "\n",
+    "Previously I set the 1e-7-meter collision spheres in `003_cracker_box.sdf` to `<drake:compliant_hydroelastic/>`, and the simulation crashed with\n",
+    "\"*Bad tetrahedron. Cannot compute gradient.*\" due to [this line in volume_mesh.h].(https://github.com/RobotLocomotion/drake/blob/0e80c9d129e053f9670658e2aa95be7e39567140/geometry/proximity/volume_mesh.h#L413-L415)\n",
+    "\n",
+    "Then I switched to `<drake:rigid_hydroelastic>`, and the 100-nanometer sphere is ok.\n",
+    "\n",
+    "```\n",
+    "def initialize_simulation(diagram):\n",
+    "    simulator = Simulator(diagram)\n",
+    "    simulator.Initialize()\n",
+    "    simulator.set_target_realtime_rate(1.)\n",
+    "    return simulator\n",
+    "\n",
+    "def run_simulation(sim_time_step):\n",
+    "    diagram = create_scene(sim_time_step)\n",
+    "    simulator = initialize_simulation(diagram)\n",
+    "    meshcat.StartRecording()\n",
+    "    simulator.AdvanceTo(10.0)\n",
+    "    meshcat.PublishRecording()\n",
+    "\n",
+    "# Run the simulation with a small time step. Try gradually increasing it!\n",
+    "run_simulation(sim_time_step=0.0001)\n",
+    "```"
    ]
   },
   {
