Try continuous integrator by setting time_step=0 Use Hunt-Crossley dissipation 1.25 and mu_dynamic/static 0.5

--- a/tutorials/hydro_compliant_cylinder_compliant_box.ipynb
+++ b/tutorials/hydro_compliant_cylinder_compliant_box.ipynb
@@ -110,9 +110,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.00040833 0.         0.        ]\n",
+      " [0.         0.00040833 0.        ]\n",
+      " [0.         0.         0.0008    ]]\n"
+     ]
+    }
+   ],
    "source": [
     "from pydrake.multibody.tree import UnitInertia\n",
     "\n",
@@ -128,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +147,7 @@
        "<RunResult.STOPPED: 2>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,9 +186,9 @@
     "            <!-- 5mm mesh resolution for objects of size in centimeters is for high accuracy -->\n",
     "            0.005\n",
     "          </drake:mesh_resolution_hint>\n",
-    "          <drake:mu_dynamic>1</drake:mu_dynamic>\n",
-    "          <drake:mu_static>1</drake:mu_static>\n",
-    "          <drake:hunt_crossley_dissipation>0</drake:hunt_crossley_dissipation>\n",
+    "          <drake:mu_dynamic>0.5</drake:mu_dynamic>\n",
+    "          <drake:mu_static>0.5</drake:mu_static>\n",
+    "          <drake:hunt_crossley_dissipation>1.25</drake:hunt_crossley_dissipation>\n",
     "          <drake:relaxation_time>0</drake:relaxation_time>\n",
     "        </drake:proximity_properties>\n",
     "      </collision>\n",
@@ -217,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +236,7 @@
        "<RunResult.STOPPED: 2>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,9 +266,9 @@
     "          </cylinder>\n",
     "        </geometry>\n",
     "        <drake:proximity_properties>\n",
-    "          <drake:mu_dynamic>1</drake:mu_dynamic>\n",
-    "          <drake:mu_static>1</drake:mu_static>\n",
-    "          <drake:hunt_crossley_dissipation>0</drake:hunt_crossley_dissipation>\n",
+    "          <drake:mu_dynamic>0.5</drake:mu_dynamic>\n",
+    "          <drake:mu_static>0.5</drake:mu_static>\n",
+    "          <drake:hunt_crossley_dissipation>1.25</drake:hunt_crossley_dissipation>\n",
     "          <drake:relaxation_time>0</drake:relaxation_time>\n",
     "        </drake:proximity_properties>\n",
     "      </collision>\n",
@@ -314,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +333,7 @@
        "<RunResult.STOPPED: 2>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,9 +369,9 @@
     "          <drake:hydroelastic_modulus>\n",
     "            2e9\n",
     "          </drake:hydroelastic_modulus>\n",
-    "          <drake:mu_dynamic>1</drake:mu_dynamic>\n",
-    "          <drake:mu_static>1</drake:mu_static>\n",
-    "          <drake:hunt_crossley_dissipation>0</drake:hunt_crossley_dissipation>\n",
+    "          <drake:mu_dynamic>0.5</drake:mu_dynamic>\n",
+    "          <drake:mu_static>0.5</drake:mu_static>\n",
+    "          <drake:hunt_crossley_dissipation>1.25</drake:hunt_crossley_dissipation>\n",
     "          <drake:relaxation_time>0</drake:relaxation_time>\n",
     "        </drake:proximity_properties>\n",
     "      </collision>\n",
@@ -399,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,16 +474,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pydrake.systems.analysis.SimulatorStatus at 0x7f794b5672b0>"
+       "<pydrake.systems.analysis.SimulatorStatus at 0x7f91720efc70>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,8 +635,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use continuous integrator by setting time_step=0\n",
+    "\n",
+    "```\n",
+    "from pydrake.systems.analysis import PrintSimulatorStatistics\n",
+    "\n",
+    "    PrintSimulatorStatistics(simulator)\n",
+    "\n",
+    "run_simulation_with_contact_report_and_viz(sim_time=15, time_step=0)\n",
+    "```\n",
+    "\n",
+    "The 15s simulated time took 6 or 7 minutes of wallclock time.\n",
+    "I need Hunt-Crossley dissipation 1.25. Previously zero dissipation caused hydro to keep going and going, which is good because it confirms there is no numerical dissipation. This is with friction coefficients (both mu_dynamic and mu_static) 0.5.\n",
+    "\n",
+    "```\n",
+    "General stats regarding discrete updates:\n",
+    "Number of time steps taken (simulator stats) = 250010\n",
+    "Simulator publishes every time step: false\n",
+    "Number of publishes = 7681\n",
+    "Number of discrete updates = 0\n",
+    "Number of \"unrestricted\" updates = 0\n",
+    "\n",
+    "Stats for integrator RungeKutta3Integrator with error control:\n",
+    "Number of time steps taken (integrator stats) = 250010\n",
+    "Initial time step taken =     0.0001 s\n",
+    "Largest time step taken = 0.00195312 s\n",
+    "Smallest adapted step size = 2.82789e-07 s\n",
+    "Number of steps shrunk due to error control = 49269\n",
+    "Number of derivative evaluations = 897837\n",
+    "Number of steps shrunk due to convergence-based failure = 0\n",
+    "Number of convergence-based step failures (should match) = 0\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -634,24 +681,61 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ContactReporter::Publish() called at time=10.0\n",
+      "ContactReporter::Publish() called at time=15.0\n",
       "num_hydroelastic_contacts() = 1\n",
       "\n",
       "hydroelastic_contact_info(0): 0-th hydroelastic contact patch\n",
       "F_Ac_W(): spatial force (on body A, at centroid of contact surface, in World frame) = \\\n",
       "SpatialForce(\n",
-      "  tau=[-4.3918929068543686e-12, -5.0326381179994e-13, 5.365605613073043e-21],\n",
-      "  f=[-2.734743841641078e-12, 3.151783265518314e-11, 9.809999999864333],\n",
+      "  tau=[-2.7014176313085922e-11, -5.7194300340776504e-11, -5.234407819487366e-16],\n",
+      "  f=[-1.906066884233594e-11, 1.4154190242361282e-11, 8.683403176006777],\n",
       ")\n",
       "contact_surface()\n",
-      "total_area(): area of contact surface in m^2 = 0.005013844917246013\n",
+      "total_area(): area of contact surface in m^2 = 0.005013844611759782\n",
       "num_faces(): number of polygons or triangles = 306\n",
-      "centroid(): centroid (in World frame) = [-0.02447072  0.12107757 -0.01000001]\n",
+      "centroid(): centroid (in World frame) = [-0.01710702  0.12760661 -0.01000001]\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "from pydrake.systems.analysis import Simulator\n",
+    "from pydrake.systems.analysis import PrintSimulatorStatistics\n",
+    "\n",
+    "def run_simulation_with_contact_report_and_viz(sim_time, time_step=1e-3, solver=\"tamsi\"):\n",
+    "    builder, plant = create_scene_with_contact_report_and_viz(time_step, solver)\n",
+    "    \n",
+    "    diagram = builder.Build()\n",
+    "    \n",
+    "    simulator = Simulator(diagram)\n",
+    "    simulator.Initialize()\n",
+    "    simulator.set_target_realtime_rate(1)\n",
+    "    \n",
+    "    v_init = np.hstack((np.array([0, 0, 2 * np.pi, 0, 0, 0]), np.array([0, 0, 2 * np.pi, 0, 0, 0])))\n",
+    "    \n",
+    "    plant_context = diagram.GetSubsystemContext(plant, simulator.get_context())\n",
+    "    plant.SetVelocities(plant_context, v_init)\n",
+    "    \n",
+    "    meshcat.StartRecording(frames_per_second=512.0)\n",
+    "    simulator.AdvanceTo(sim_time)\n",
+    "    meshcat.StopRecording()\n",
+    "\n",
+    "    PrintSimulatorStatistics(simulator)\n",
+    "\n",
+    "    # Numerically report contact results at the end of simulation.\n",
+    "    diagram.ForcedPublish(simulator.get_context())\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "run_simulation_with_contact_report_and_viz(sim_time=15, time_step=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Previously ran with discrete time stepper of 1e-4 time-step size\n",
+    "\n",
     "from pydrake.systems.analysis import Simulator\n",
     "\n",
     "def run_simulation_with_contact_report_and_viz(sim_time, time_step=1e-3, solver=\"tamsi\"):\n",
@@ -676,7 +760,24 @@
     "    diagram.ForcedPublish(simulator.get_context())\n",
     "\n",
     "    \n",
-    "run_simulation_with_contact_report_and_viz(sim_time=10, time_step=1e-4)"
+    "run_simulation_with_contact_report_and_viz(sim_time=4, time_step=1e-4)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "ContactReporter::Publish() called at time=4.0\n",
+    "num_hydroelastic_contacts() = 1\n",
+    "\n",
+    "hydroelastic_contact_info(0): 0-th hydroelastic contact patch\n",
+    "F_Ac_W(): spatial force (on body A, at centroid of contact surface, in World frame) = \\\n",
+    "SpatialForce(\n",
+    "  tau=[2.6063725371243063e-12, -4.630148582002595e-12, 1.5155123087971682e-20],\n",
+    "  f=[-3.6069054088718166e-11, -2.231427822929886e-11, 9.809999999114792],\n",
+    ")\n",
+    "contact_surface()\n",
+    "total_area(): area of contact surface in m^2 = 0.0050138449172460135\n",
+    "num_faces(): number of polygons or triangles = 306\n",
+    "centroid(): centroid (in World frame) = [-0.02447072  0.12107757 -0.01000001]\n",
+    "```"
    ]
   },
   {
@@ -692,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,11 +832,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "html_file = open(\"/home/damrongguoy/2023-04-03_record_hydro_compliant_cylinder_compliant_box.html\", \"wt\")\n",
+    "html_file = open(\"/home/damrongguoy/2023-04-04_EulerDisk_RungeKutta3Integrator_HCDissipation1.25_mu0.5_15seconds_movie.html\", \"wt\")\n",
     "html_file.write(meshcat.StaticHtml())\n",
     "html_file.close()"
    ]
