Hide saving HTML

--- a/tutorials/hydro_compliant_cylinder_compliant_box.ipynb
+++ b/tutorials/hydro_compliant_cylinder_compliant_box.ipynb
@@ -836,9 +836,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "html_file = open(\"/home/damrongguoy/2023-04-04_EulerDisk_RungeKutta3Integrator_HCDissipation1.25_mu0.5_15seconds_movie.html\", \"wt\")\n",
-    "html_file.write(meshcat.StaticHtml())\n",
-    "html_file.close()"
+    "#html_file = open(\"/home/damrongguoy/2023-04-04_EulerDisk_RungeKutta3Integrator_HCDissipation1.25_mu0.5_15seconds_movie.html\", \"wt\")\n",
+    "#html_file.write(meshcat.StaticHtml())\n",
+    "#html_file.close()"
    ]
   },
   {
